argocd/applications/envoy-gateway-system/envoy-gateway/templates/networkpolicy.yaml
# Allow external traffic to Envoy Gateway proxy pods (data plane)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-proxy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
  ingress:
    - fromEntities:
        - world
    - fromEndpoints:
        - {}
  egress:
    - toEntities:
        - cluster
---
# Allow Envoy Gateway controller to reach kube-apiserver and manage proxy resources
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-controller
spec:
  endpointSelector:
    matchLabels:
      control-plane: envoy-gateway
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - cluster
